feat: add finish diagnostics usecase and listeners to generate estimate
